hphp/hack/test/typecheck/fc_enum_case_6.php.exp
File "fc_enum_case_6.php", line 12, characters 10-11:
Case in switch on enum is not an enum constant (Typing[4020])
